@@ -33,6 +33,18 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -49,6 +61,16 @@ operator|.
 name|io
 operator|.
 name|DataInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
 import|;
 end_import
 
@@ -121,6 +143,20 @@ operator|.
 name|fs
 operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|IOUtils
 import|;
 end_import
 
@@ -260,6 +296,14 @@ name|fileSys
 init|=
 literal|null
 decl_stmt|;
+DECL|field|namesystem
+specifier|private
+specifier|static
+name|FSNamesystem
+name|namesystem
+init|=
+literal|null
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|setUp ()
@@ -344,6 +388,13 @@ operator|.
 name|getFileSystem
 argument_list|()
 expr_stmt|;
+name|namesystem
+operator|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+expr_stmt|;
 block|}
 comment|/**    * Tests metasave    */
 annotation|@
@@ -358,15 +409,6 @@ name|IOException
 throws|,
 name|InterruptedException
 block|{
-specifier|final
-name|FSNamesystem
-name|namesystem
-init|=
-name|cluster
-operator|.
-name|getNamesystem
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -451,27 +493,16 @@ literal|"metasave.out.txt"
 argument_list|)
 expr_stmt|;
 comment|// Verification
-name|String
-name|logFile
-init|=
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"hadoop.log.dir"
-argument_list|)
-operator|+
-literal|"/"
-operator|+
-literal|"metasave.out.txt"
-decl_stmt|;
 name|FileInputStream
 name|fstream
 init|=
 operator|new
 name|FileInputStream
 argument_list|(
-name|logFile
+name|getLogFile
+argument_list|(
+literal|"metasave.out.txt"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|DataInputStream
@@ -607,15 +638,6 @@ name|IOException
 throws|,
 name|InterruptedException
 block|{
-specifier|final
-name|FSNamesystem
-name|namesystem
-init|=
-name|cluster
-operator|.
-name|getNamesystem
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -718,20 +740,6 @@ literal|"metasaveAfterDelete.out.txt"
 argument_list|)
 expr_stmt|;
 comment|// Verification
-name|String
-name|logFile
-init|=
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"hadoop.log.dir"
-argument_list|)
-operator|+
-literal|"/"
-operator|+
-literal|"metasaveAfterDelete.out.txt"
-decl_stmt|;
 name|BufferedReader
 name|reader
 init|=
@@ -745,7 +753,10 @@ init|=
 operator|new
 name|FileInputStream
 argument_list|(
-name|logFile
+name|getLogFile
+argument_list|(
+literal|"metasaveAfterDelete.out.txt"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|DataInputStream
@@ -876,6 +887,151 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+comment|/**    * Tests that metasave overwrites the output file (not append).    */
+annotation|@
+name|Test
+DECL|method|testMetaSaveOverwrite ()
+specifier|public
+name|void
+name|testMetaSaveOverwrite
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// metaSave twice.
+name|namesystem
+operator|.
+name|metaSave
+argument_list|(
+literal|"metaSaveOverwrite.out.txt"
+argument_list|)
+expr_stmt|;
+name|namesystem
+operator|.
+name|metaSave
+argument_list|(
+literal|"metaSaveOverwrite.out.txt"
+argument_list|)
+expr_stmt|;
+comment|// Read output file.
+name|FileInputStream
+name|fis
+init|=
+literal|null
+decl_stmt|;
+name|InputStreamReader
+name|isr
+init|=
+literal|null
+decl_stmt|;
+name|BufferedReader
+name|rdr
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fis
+operator|=
+operator|new
+name|FileInputStream
+argument_list|(
+name|getLogFile
+argument_list|(
+literal|"metaSaveOverwrite.out.txt"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|isr
+operator|=
+operator|new
+name|InputStreamReader
+argument_list|(
+name|fis
+argument_list|)
+expr_stmt|;
+name|rdr
+operator|=
+operator|new
+name|BufferedReader
+argument_list|(
+name|isr
+argument_list|)
+expr_stmt|;
+comment|// Validate that file was overwritten (not appended) by checking for
+comment|// presence of only one "Live Datanodes" line.
+name|boolean
+name|foundLiveDatanodesLine
+init|=
+literal|false
+decl_stmt|;
+name|String
+name|line
+init|=
+name|rdr
+operator|.
+name|readLine
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|line
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|line
+operator|.
+name|startsWith
+argument_list|(
+literal|"Live Datanodes"
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|foundLiveDatanodesLine
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"multiple Live Datanodes lines, output file not overwritten"
+argument_list|)
+expr_stmt|;
+block|}
+name|foundLiveDatanodesLine
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|line
+operator|=
+name|rdr
+operator|.
+name|readLine
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+literal|null
+argument_list|,
+name|rdr
+argument_list|,
+name|isr
+argument_list|,
+name|fis
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|AfterClass
 DECL|method|tearDown ()
@@ -909,6 +1065,32 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+block|}
+comment|/**    * Returns a File for the given name inside the log directory.    *     * @param name String file name    * @return File for given name inside log directory    */
+DECL|method|getLogFile (String name)
+specifier|private
+specifier|static
+name|File
+name|getLogFile
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+operator|new
+name|File
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"hadoop.log.dir"
+argument_list|)
+argument_list|,
+name|name
+argument_list|)
+return|;
 block|}
 block|}
 end_class
